Fix whitespace between header and content
The whitespace between the header and content is now more consistent
across the site.

This required the use of a new utility class that sets the top margin to
zero.

--- a/source/assets/stylesheets/_pages.scss
+++ b/source/assets/stylesheets/_pages.scss
@@ -7,9 +7,17 @@
 }
 
 .title--mini {
+  // @include first(1) { margin-top: 0; }
 	@include all-but-first-last(1) {
 		margin-bottom: 1px solid $colour-black;
 	}
+}
+
+.title--mini.u-clear-top-margin {
+  // Add top padding so that if the user clicks the first blog post while the
+  // page is scrolled to the top, the title on the actual blog page does not
+  // appear to jump
+  padding-top: 0.325em;
 }
 
 .title {
